...
        Spacer(modifier = Modifier.height(29.dp))
        var text by remember { mutableStateOf(question.text) }
        InputTextField(
            text,
            Modifier
                .fillMaxWidth(1f)
                .testTag("QuestionInputField"),
        ) {
            text = it
            question.text = text
        }
    }
}
...
