...
                )

                RoundButton(
                    modifier = Modifier
                        .height(44.dp)
                        .width(144.dp)
                        .testTag("signatureDoneButton"),
                    text = "Sign",
                    border = BorderStroke(width = 1.dp, color = AppTheme.colors.primary),
                    onClick = {
                        mutableSvg.value = signaturePadAdapter?.getSignatureSvg() ?: ""
                        onClickDone(mutableSvg.value)
                    }
...
